# SImulated-Color-Tracking-Robot

./: CMakeLists.txt  README.md  main.cpp
devel/: .catkin  setup.sh
devel/lib/my_robot_color_tracking/: color_tracking_node
devel/lib/my_robot_control/: robot_control_node
devel/lib/pkgconfig/: my_robot_color_tracking.pc  my_robot_control.pc  my_robot_description.pc  my_robot_gazebo.pc
devel/share/my_robot_color_tracking/cmake/: my_robot_color_trackingConfig.cmake
devel/share/my_robot_control/cmake/: my_robot_controlConfig.cmake
devel/share/my_robot_description/cmake/: my_robot_descriptionConfig.cmake
devel/share/my_robot_gazebo/cmake/: my_robot_gazeboConfig.cmake
src/my_robot_color_tracking/: CMakeLists.txt  package.xml
src/my_robot_color_tracking/src/: color_tracking_node.cpp
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/src/: robot_control_node.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/urdf/: my_robot.urdf
src/my_robot_gazebo/: package.xml
src/my_robot_gazebo/launch/: my_robot_gazebo.launch
